# python-maturin-gettext-viewer

./: Cargo.toml  README.md  pyproject.toml  sample.py
python/maturin_gettext_viewer/: __init__.py  maturin_gettext_viewer.pyi
src/: gettext.c  lib.rs
