[project]
name = "maturin-gettext-viewer"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Naoya Yamashita", email = "conao3@gmail.com"},
]
dependencies = []
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pdm]
package-type = "application"
